--- a/Front-HTML/Scss/_main-page.scss
+++ b/Front-HTML/Scss/_main-page.scss
@@ -47,10 +47,11 @@
     top: 0.4rem;
 }
 
-.search{
-    position:absolute;
-    right: 5rem;
-    top: 0.4rem;
+.search-svg {
+    position: absolute;
+    top: 0.3rem;
+    right: 5.2rem;
+    z-index: 30;
 }
 
 .plus{
@@ -70,16 +71,16 @@
 .padding-top{
     padding-top:35px;
 }
-
-
 .click{
     position:absolute;
-    bottom:0.5vh;
     color:$primary;
     font-size:12px;
     font-family:$family-primary;
 }
-
+.click-button:hover, .click:hover {
+    background-color: $primary;
+    color: #fff;
+}
 .button-size{
     width: 30px;
     height:30px;
@@ -89,6 +90,15 @@
     margin: 0 0.7rem;
     width: 30px;
     height: 30px;
+    color: $primary;
+    border: 1px solid $primary;
+    border-radius: 50%;
+    font-size: 14px;
+    padding: 0.1rem 0 0 0;
+}
+.share-item:hover {
+    color: #fff;
+    background-color: $primary;
 }
 .click-button{
     width:90px;
@@ -118,7 +128,7 @@
 .fa-info-content {
     height: 20px;
     width: 20px;
-    margin: 0.2rem;
+    margin: 0.2rem 0.3rem 0.2rem 0.1rem;
     font-size: 20.67px!important;
 }
 .card-content-item {
@@ -127,6 +137,10 @@
 .pagination-link-content{
     min-width: 0.1em;
     border: none;
+}
+.pagination-link-content:hover{
+    border-bottom: 1px solid $warning;
+    border-radius: inherit;
 }
 .is-current {
     border-bottom: 1px solid $warning;
