--- a/Front-HTML/Scss/style.scss
+++ b/Front-HTML/Scss/style.scss
@@ -67,6 +67,7 @@ $footer-padding: 3rem 1.5rem 5.3rem;
 @import "./error";
 
 @import "./main-page";
+@import "./user-info";
 
 // main classes
 .ml-a {
