--- a/Front-HTML/Scss/_alphabet-english.scss
+++ b/Front-HTML/Scss/_alphabet-english.scss
@@ -19,22 +19,11 @@
     box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.4);
     border-radius: 8px;
 }
-.fly-1{
-    position:fixed;
-    right: 5rem;
-    top: 14rem;
-}
-
-.fly-2{
-    position:fixed;
-    left:10vh;
-    top:70vh;
-}
 
 .yellow-ladybird{
    position: absolute;
    left: 17.5rem;
-   top: 1.5rem;
+   top: 2.5rem;
    z-index: 30;
 }
 .search-input {
@@ -47,11 +36,10 @@
     top: 0.4rem;
 }
 
-.search-svg {
-    position: absolute;
-    top: 0.3rem;
-    right: 5.2rem;
-    z-index: 30;
+.search{
+    position:absolute;
+    right: 5rem;
+    top: 0.4rem;
 }
 
 .plus{
@@ -59,6 +47,7 @@
     right: 0.6rem;
     top: 0.4rem;
 }
+
 
 .is-width{
     width:714px;
@@ -71,16 +60,16 @@
 .padding-top{
     padding-top:35px;
 }
+
+
 .click{
     position:absolute;
+    bottom:0.5vh;
     color:$primary;
     font-size:12px;
     font-family:$family-primary;
 }
-.click-button:hover, .click:hover {
-    background-color: $primary;
-    color: #fff;
-}
+
 .button-size{
     width: 30px;
     height:30px;
@@ -90,15 +79,6 @@
     margin: 0 0.7rem;
     width: 30px;
     height: 30px;
-    color: $primary;
-    // border: 1px solid $primary;
-    border-radius: 50%;
-    font-size: 14px;
-    padding: 0.1rem 0 0 0;
-}
-.share-item:hover {
-    color: #fff;
-    background-color: $primary;
 }
 .click-button{
     width:90px;
@@ -128,7 +108,7 @@
 .fa-info-content {
     height: 20px;
     width: 20px;
-    margin: 0.2rem 0.3rem 0.2rem 0.1rem;
+    margin: 0.2rem;
     font-size: 20.67px!important;
 }
 .card-content-item {
@@ -138,11 +118,15 @@
     min-width: 0.1em;
     border: none;
 }
-.pagination-link-content:hover{
-    border-bottom: 1px solid $warning;
-    border-radius: inherit;
-}
 .is-current {
     border-bottom: 1px solid $warning;
     border-radius: inherit;
+}
+
+.card-radius{
+    border-radius:3rem;
+}
+
+.li-position-en{
+    margin-left: 18px;
 }
