--- a/Front-HTML/Scss/style.scss
+++ b/Front-HTML/Scss/style.scss
@@ -51,6 +51,7 @@ $button-focus-box-shadow-size: 0 0 0 0.25em;
 //font sizes
 $size-7: 0.875rem;
 
+
 //footer global variables
 $footer-background-color: #fff;
 $footer-padding: 3rem 1.5rem 5.3rem;
@@ -68,6 +69,7 @@ $footer-padding: 3rem 1.5rem 5.3rem;
 
 @import "./main-page";
 @import "./alphabet-georgian";
+@import "./alphabet-english";
 @import "./user-info";
 
 // main classes
@@ -80,6 +82,7 @@ $footer-padding: 3rem 1.5rem 5.3rem;
 .mx-a {
   margin: 0 auto;
 }
+
 
 //flexbox
 .is {
