--- a/Front-HTML/Scss/_user-info.scss
+++ b/Front-HTML/Scss/_user-info.scss
@@ -17,3 +17,9 @@
     font-size: 20.67px!important;
     color: #60B5B6;
 }
+.input-style{
+    width:700px;
+    font-size:14px;
+    height:100px;
+    padding-left:50px !important;
+}
