--- a/Front-HTML/Scss/_alphabet-english.scss
+++ b/Front-HTML/Scss/_alphabet-english.scss
@@ -1,132 +1,11 @@
-.earth{
-    width:45px;
-    height:45px;
-}
-
-.dropdown-button{
-    background-color:white;
-    border: none;
-    position: relative;
-    left: 8rem;
-    top: 4rem;
-}
-.dropdown-menu-content {
-    left: 2.7rem;
-    top: 7rem;
-    min-width: 6rem;
-}
-.dropdown-menu-content-item {
-    box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.4);
-    border-radius: 8px;
-}
-
-.yellow-ladybird{
+.yellow-ladybird-en{
    position: absolute;
    left: 17.5rem;
    top: 2.5rem;
    z-index: 30;
 }
-.search-input {
-    border: transparent;
-    background-color: transparent;
-}
-.blue-mark{
-    position: absolute;
-    right: 3rem;
-    top: 0.4rem;
-}
-
-.search{
-    position:absolute;
-    right: 5rem;
-    top: 0.4rem;
-}
-
-.plus{
-    position:absolute;
-    right: 0.6rem;
-    top: 0.4rem;
-}
-
-
-.is-width{
-    width:714px;
-    height:185px;
-}
-
-.padding-left{
-    padding-left:63px;
-}
-.padding-top{
-    padding-top:35px;
-}
-
-
-.click{
-    position:absolute;
-    bottom:0.5vh;
-    color:$primary;
-    font-size:12px;
-    font-family:$family-primary;
-}
-
-.button-size{
-    width: 30px;
-    height:30px;
-}
-.share-item {
-    display: flex;
-    margin: 0 0.7rem;
-    width: 30px;
-    height: 30px;
-}
-.click-button{
-    width:90px;
-    height:30px;
-    box-shadow: 2px 2px 8px #7FD1D866;
-    border-radius: 15px;
-    border: none;
-    padding-left: calc(1em + 0.25em);
-    padding-right: calc(1em + 0.25em);
-}
-.share-full-content {
-    padding: 0.5rem 3.75rem 1rem;
-}
-.user-color{
-    background-color: rgba(247, 207, 67, 1);
-    height: 20px;
-    width: 20px;
-    border-radius: 100%;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 0.4rem;
-    border-color: rgba(247, 207, 67, 1);
-    box-shadow: 2px -1px 12px -4px rgba(247, 207, 67, 1);
-    font-size: 15px;
-    margin: 0.2rem;
-}
-.fa-info-content {
-    height: 20px;
-    width: 20px;
-    margin: 0.2rem;
-    font-size: 20.67px!important;
-}
-.card-content-item {
-    display: flex;
-}
-.pagination-link-content{
-    min-width: 0.1em;
-    border: none;
-}
-.is-current {
-    border-bottom: 1px solid $warning;
-    border-radius: inherit;
-}
-
-.card-radius{
-    border-radius:3rem;
-}
 
 .li-position-en{
     margin-left: 18px;
 }
+
