--- a/Front-HTML/Scss/style.css
+++ b/Front-HTML/Scss/style.css
@@ -12788,7 +12788,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   top: 70vh;
 }
 
-.yellow-ladybird {
+.yellow-ladybird-main {
   position: absolute;
   left: 17.5rem;
   top: 1.5rem;
@@ -12939,6 +12939,13 @@ a.has-text-primary:hover, a.has-text-primary:focus {
   border-radius: inherit;
 }
 
+.input-style {
+  width: 700px;
+  font-size: 14px;
+  height: 100px;
+  padding-left: 50px !important;
+}
+
 .earth {
   width: 45px;
   height: 45px;
@@ -12979,18 +12986,6 @@ a.has-text-primary:hover, a.has-text-primary:focus {
 .blue-mark {
   position: absolute;
   right: 3rem;
-  top: 0.4rem;
-}
-
-.search {
-  position: absolute;
-  right: 5rem;
-  top: 0.4rem;
-}
-
-.plus {
-  position: absolute;
-  right: 0.6rem;
   top: 0.4rem;
 }
 
@@ -13002,247 +12997,15 @@ a.has-text-primary:hover, a.has-text-primary:focus {
   top: 1.5rem;
 }
 
-.is-width {
-  width: 714px;
-  height: 185px;
-}
-
-.padding-left {
-  padding-left: 63px;
-}
-
-.padding-top {
-  padding-top: 35px;
-}
-
-.click {
-  position: absolute;
-  bottom: 0.5vh;
-  color: #7fd1d8;
-  font-size: 12px;
-  font-family: "ALK Sanet";
-}
-
-.button-size {
-  width: 30px;
-  height: 30px;
-}
-
-.share-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0 0.7rem;
-  width: 30px;
-  height: 30px;
-}
-
-.click-button {
-  width: 90px;
-  height: 30px;
-  -webkit-box-shadow: 2px 2px 8px #7FD1D866;
-          box-shadow: 2px 2px 8px #7FD1D866;
-  border-radius: 15px;
-  border: none;
-  padding-left: calc(1em + 0.25em);
-  padding-right: calc(1em + 0.25em);
-}
-
-.share-full-content {
-  padding: 0.5rem 3.75rem 1rem;
-}
-
-.user-color {
-  background-color: #f7cf43;
-  height: 20px;
-  width: 20px;
-  border-radius: 100%;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0.4rem;
-  border-color: #f7cf43;
-  -webkit-box-shadow: 2px -1px 12px -4px #f7cf43;
-          box-shadow: 2px -1px 12px -4px #f7cf43;
-  font-size: 15px;
-  margin: 0.2rem;
-}
-
-.fa-info-content {
-  height: 20px;
-  width: 20px;
-  margin: 0.2rem;
-  font-size: 20.67px !important;
-}
-
-.card-content-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.pagination-link-content {
-  min-width: 0.1em;
-  border: none;
-}
-
-.is-current {
-  border-bottom: 1px solid #f7cf43;
-  border-radius: inherit;
-}
-
-.card-radius {
-  border-radius: 3rem;
-}
-
 .li-position {
   margin-left: 17px;
 }
 
-.earth {
-  width: 45px;
-  height: 45px;
-}
-
-.dropdown-button {
-  background-color: white;
-  border: none;
-  position: relative;
-  left: 8rem;
-  top: 4rem;
-}
-
-.dropdown-menu-content {
-  left: 2.7rem;
-  top: 7rem;
-  min-width: 6rem;
-}
-
-.dropdown-menu-content-item {
-  -webkit-box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.4);
-          box-shadow: 2px 2px 8px rgba(127, 209, 216, 0.4);
-  border-radius: 8px;
-}
-
-.yellow-ladybird {
+.yellow-ladybird-en {
   position: absolute;
   left: 17.5rem;
   top: 2.5rem;
   z-index: 30;
-}
-
-.search-input {
-  border: transparent;
-  background-color: transparent;
-}
-
-.blue-mark {
-  position: absolute;
-  right: 3rem;
-  top: 0.4rem;
-}
-
-.search {
-  position: absolute;
-  right: 5rem;
-  top: 0.4rem;
-}
-
-.plus {
-  position: absolute;
-  right: 0.6rem;
-  top: 0.4rem;
-}
-
-.is-width {
-  width: 714px;
-  height: 185px;
-}
-
-.padding-left {
-  padding-left: 63px;
-}
-
-.padding-top {
-  padding-top: 35px;
-}
-
-.click {
-  position: absolute;
-  bottom: 0.5vh;
-  color: #7fd1d8;
-  font-size: 12px;
-  font-family: "ALK Sanet";
-}
-
-.button-size {
-  width: 30px;
-  height: 30px;
-}
-
-.share-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0 0.7rem;
-  width: 30px;
-  height: 30px;
-}
-
-.click-button {
-  width: 90px;
-  height: 30px;
-  -webkit-box-shadow: 2px 2px 8px #7FD1D866;
-          box-shadow: 2px 2px 8px #7FD1D866;
-  border-radius: 15px;
-  border: none;
-  padding-left: calc(1em + 0.25em);
-  padding-right: calc(1em + 0.25em);
-}
-
-.share-full-content {
-  padding: 0.5rem 3.75rem 1rem;
-}
-
-.user-color {
-  background-color: #f7cf43;
-  height: 20px;
-  width: 20px;
-  border-radius: 100%;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0.4rem;
-  border-color: #f7cf43;
-  -webkit-box-shadow: 2px -1px 12px -4px #f7cf43;
-          box-shadow: 2px -1px 12px -4px #f7cf43;
-  font-size: 15px;
-  margin: 0.2rem;
-}
-
-.fa-info-content {
-  height: 20px;
-  width: 20px;
-  margin: 0.2rem;
-  font-size: 20.67px !important;
-}
-
-.card-content-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.pagination-link-content {
-  min-width: 0.1em;
-  border: none;
-}
-
-.is-current {
-  border-bottom: 1px solid #f7cf43;
-  border-radius: inherit;
-}
-
-.card-radius {
-  border-radius: 3rem;
 }
 
 .li-position-en {
@@ -13270,6 +13033,13 @@ a.has-text-primary:hover, a.has-text-primary:focus {
   margin: 0.2rem 0.3rem 0.2rem 0.1rem;
   font-size: 20.67px !important;
   color: #60B5B6;
+}
+
+.input-style {
+  width: 700px;
+  font-size: 14px;
+  height: 100px;
+  padding-left: 50px !important;
 }
 
 .ml-a {
