--- a/Front-HTML/Scss/_user-info.scss
+++ b/Front-HTML/Scss/_user-info.scss
@@ -10,6 +10,14 @@
     top: -4rem;
     z-index: 30;
 }
+
+.user-ladybird{
+    position: absolute;
+    left: 17.5rem;
+    top: 1.5rem;
+    z-index: 30;
+ }
+
 .fa-clock-content {
     height: 20px;
     width: 20px;
