--- a/Front-HTML/Scss/_alphabet-georgian.scss
+++ b/Front-HTML/Scss/_alphabet-georgian.scss
@@ -5,16 +5,19 @@
    top: 4rem;
    z-index: 30;
 
+.bee-alphabet{
+    position:fixed;
+    margin-left:-4rem;
+}
 
 .found{
     font-size:14px;
     font-family: $family-secondary;
     position:relative;
     left:33rem;
-    top:1.5rem;
+    top:1rem;
 }
 
 .li-position{
     margin-left: 17px;
 }
-
