--- a/Front-HTML/Scss/style.scss
+++ b/Front-HTML/Scss/style.scss
@@ -71,6 +71,7 @@ $footer-padding: 3rem 1.5rem 5.3rem;
 @import "./alphabet-georgian";
 @import "./alphabet-english";
 @import "./user-info";
+@import "./adding-words";
 
 // main classes
 .ml-a {
