--- a/Front-HTML/Scss/_adding-words.scss
+++ b/Front-HTML/Scss/_adding-words.scss
@@ -4,32 +4,39 @@
 
 
     .words_lighthouse{
-      left: -60px;
-      top: 10px;
+      position: absolute;
+      right: 20rem;
+      bottom: 10rem;
     }
 
     .words_fly {
-    position: absolute;
-    left: 35rem;
-    bottom: 30rem;
+      position: absolute;
+      left: 38rem;
+      bottom: 25rem;
     }
 
     .yellow-ladybird-words{
-     z-index: 100;
-     width: 30px;
-     height: 25px;
-     position: absolute;
-     left: 3rem;
-     top: 0.75rem;
+      position: absolute;
+      width: 30px;
+      height: 25px;
+      z-index: 100;
+      left: 3rem;
+      bottom: 3rem;
     }
     
     .field {
       .input::placeholder {
         font-family: "HelveticaNeue";
         font-size:14px;
+        margin-left:20px;
+        margin-bottom:20px; 
+        width:248px;  
       }
       p {
         font-size: 10px;
+      }
+      button{
+        width:163px;
       }
     }
 
@@ -46,13 +53,23 @@
       -webkit-transform: translateX(-50%);
       transform: translateX(-50%);
     }
+
+   .error-message{
+      font-size:10px; 
+      font-family:'HelveticaNeue';
+      margin-top:2rem;
+      margin-left:4rem;
+     }
+
+
+
     // @media screen and(max-width: 1024px) {
-    //   &_image-box-2 {
+    //     .words_lighthouse{
     //     display: none;
     //   }
     // }
     // @media screen and(max-width: 768px) {
-    //   &_image-box-1 {
+    //    .words_fly{
     //     display: none;
     //   }
     // }
