--- a/vue_front/src/assets/Sass/_flaticon.scss
+++ b/vue_front/src/assets/Sass/_flaticon.scss
@@ -1,30 +1,30 @@
-    /*
+/*
     Flaticon icon font: Flaticon
-    Creation date: 15/10/2020 17:05
+    Creation date: 15/10/2020 18:09
     */
 
-    @font-face {
-  font-family: "Flaticon";
-  src: url("./Flaticon.eot");
-  src: url("./Flaticon.eot?#iefix") format("embedded-opentype"),
-       url("./Flaticon.woff2") format("woff2"),
-       url("./Flaticon.woff") format("woff"),
-       url("./Flaticon.ttf") format("truetype"),
-       url("./Flaticon.svg#Flaticon") format("svg");
+@font-face {
+  font-family: 'Flaticon';
+  src: url('../fonts/Flaticon.eot');
+  src: url('../fonts/Flaticon.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Flaticon.woff2') format('woff2'),
+    url('../fonts/Flaticon.woff') format('woff'),
+    url('../fonts/Flaticon.ttf') format('truetype'),
+    url('../fonts/Flaticon.svg#Flaticon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:0) {
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
   @font-face {
-    font-family: "Flaticon";
-    src: url("./Flaticon.svg#Flaticon") format("svg");
+    font-family: 'Flaticon';
+    src: url('../fonts/Flaticon.svg#Flaticon') format('svg');
   }
 }
 
-    .fi:before{
-        display: inline-block;
-  font-family: "Flaticon";
+.fi:before {
+  display: inline-block;
+  font-family: 'Flaticon';
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -35,36 +35,74 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
-    }
+}
 
-    .flaticon-user:before { content: "\f100"; }
-.flaticon-linkedin:before { content: "\f101"; }
-.flaticon-facebook:before { content: "\f102"; }
-.flaticon-twitter:before { content: "\f103"; }
-.flaticon-info:before { content: "\f104"; }
-.flaticon-share:before { content: "\f105"; }
-.flaticon-plus:before { content: "\f106"; }
-.flaticon-clock:before { content: "\f107"; }
-.flaticon-pencil-edit-button:before { content: "\f108"; }
-.flaticon-checked:before { content: "\f109"; }
-.flaticon-eye:before { content: "\f10a"; }
-.flaticon-block:before { content: "\f10b"; }
-.flaticon-internet:before { content: "\f10c"; }
-.flaticon-down-chevron:before { content: "\f10d"; }
-.flaticon-up-chevron:before { content: "\f10e"; }
-    
-    $font-Flaticon-user: "\f100";
-    $font-Flaticon-linkedin: "\f101";
-    $font-Flaticon-facebook: "\f102";
-    $font-Flaticon-twitter: "\f103";
-    $font-Flaticon-info: "\f104";
-    $font-Flaticon-share: "\f105";
-    $font-Flaticon-plus: "\f106";
-    $font-Flaticon-clock: "\f107";
-    $font-Flaticon-pencil-edit-button: "\f108";
-    $font-Flaticon-checked: "\f109";
-    $font-Flaticon-eye: "\f10a";
-    $font-Flaticon-block: "\f10b";
-    $font-Flaticon-internet: "\f10c";
-    $font-Flaticon-down-chevron: "\f10d";
-    $font-Flaticon-up-chevron: "\f10e";
+.user:before {
+  content: '\f100';
+}
+.in:before {
+  content: '\f101';
+}
+.fb:before {
+  content: '\f102';
+}
+.tw:before {
+  content: '\f103';
+}
+.info:before {
+  content: '\f104';
+}
+.share:before {
+  content: '\f105';
+}
+.plus:before {
+  content: '\f106';
+}
+.clock:before {
+  content: '\f107';
+}
+.edit:before {
+  content: '\f108';
+}
+.checked:before {
+  content: '\f109';
+}
+.eye:before {
+  content: '\f10a';
+}
+.blocks:before {
+  content: '\f10b';
+}
+.internet:before {
+  content: '\f10c';
+}
+.down:before {
+  content: '\f10d';
+}
+.up:before {
+  content: '\f10e';
+}
+.right-chevron:before {
+  content: '\f10f';
+}
+.left-chevron:before {
+  content: '\f110';
+}
+
+$user: '\f100';
+$in: '\f101';
+$fb: '\f102';
+$tw: '\f103';
+$info: '\f104';
+$share: '\f105';
+$plus: '\f106';
+$clock: '\f107';
+$edit: '\f108';
+$checked: '\f109';
+$eye: '\f10a';
+$blocks: '\f10b';
+$internet: '\f10c';
+$down: '\f10d';
+$up: '\f10e';
+$right-chevron: '\f10f';
+$left-chevron: '\f110';
