--- a/vue_front/src/assets/Sass/style.scss
+++ b/vue_front/src/assets/Sass/style.scss
@@ -1,9 +1,11 @@
+@import '~bulma/sass/utilities/_all';
 // color global variables
 $primary: #7fd1d8;
 $warning: #f7cf43;
 $danger: #dc6c85;
 $text: #c5cbcd;
 $grey-lightest: #c5cbcd;
+$purple: #947dce;
 
 $info: #f7f7f7;
 $info-invert: #7e7e7e;
@@ -12,6 +14,8 @@ $info-dark: #c5cbcd;
 
 $warning-invert: #fff;
 $primary-invert: #fff;
+
+$purple-invert: #fff;
 
 //font family
 $family-primary: 'ALK Sanet';
@@ -76,6 +80,42 @@ $pagination-disabled-background-color: rgba(197, 203, 205, 0.1);
 $pagination-disabled-border-color: transparent;
 
 $tooltip-arrow-size: 8px;
+
+$colors: (
+  'white': (
+    $white,
+    $black
+  ),
+  'light':
+  (
+    $light,
+    $light-invert
+  ),
+  'dark': (
+    $dark,
+    $dark-invert
+  ),
+  'primary': (
+    $primary,
+    $primary-invert
+  ),
+  'info': (
+    $info,
+    $info-invert
+  ),
+  'warning': (
+    $warning,
+    $warning-invert
+  ),
+  'danger': (
+    $danger,
+    $danger-invert
+  ),
+  'purple': (
+    $purple,
+    $purple-invert
+  )
+);
 
 // Import Bulma and Buefy styles
 @import '~bulma';
