--- a/vue_front/src/assets/Sass/_fonts.scss
+++ b/vue_front/src/assets/Sass/_fonts.scss
@@ -5,8 +5,7 @@
     url('../fonts/NotoSans.eot?#iefix') format('embedded-opentype'),
     url('../fonts/NotoSans.woff2') format('woff2'),
     url('../fonts/NotoSans.woff') format('woff'),
-    url('../fonts/NotoSans.ttf') format('truetype'),
-    url('../fonts/NotoSans.svg#NotoSans') format('svg');
+    url('../fonts/NotoSans.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
